--- a/_config.yml
+++ b/_config.yml
@@ -4,8 +4,10 @@ description: > # your text below (remove <br> elements if you don't need line br
   <br><br>
   Cloud Data Architect\Lead with 15+ years of experience in Recommending, developing & Implementing the enterprise-software solutions for Data Engineering, Analytics & Data Science related requirements.
   <br><br>
-  <a href="https://www.linkedin.com/in/prashant-raghuwanshi-78945a33/">View My LinkedIn Profile</a>  
-  #### Licenses and Certifications
+  <a href="https://www.linkedin.com/in/prashant-raghuwanshi-78945a33/">View My LinkedIn Profile</a> 
+  <br><br>
+  Licenses and Certifications
+  <br><br>
   •	CERTIFIED SAFe® Agile Practitioner.
   •	AWS Certified Data Analytics - Specialty
   •	AWS Certified Solutions Architect – Associate.
@@ -16,6 +18,3 @@ description: > # your text below (remove <br> elements if you don't need line br
   •	SAP Certified Application Associate - SAP HANA Modelling 2.0.
   •	Postgraduate Diploma in Operation Management.
   •	Cisco Certified Network Associate Certification
-
-  
-theme: jekyll-theme-minimal
